	frameworks with the bundle.

2002-10-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSHtml.m: Create automatic references to protocols in
	type specifications of the form (id<protocol1,protocol2,...>)
	* Tools/autogsdoc.m: Add -Files option to read names of files
	to process as a property list rather than using command line args.
	Add -Clean flag to remove generated output files.
	* Tools/AGSParser.m: Warn about private methods and ivars.

2002-10-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSProcessInfo.m: Make safe to reinitialise with args.
	* Source/Additions/GSXML.m: Correct handling of atttribute values.
	* Tools/autogsdoc.m: Initialise NSProcessInfo explicitly.

2002-10-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: ([-initWithContentsOfFile:]) check to see
	if the file is writable and the directory exists.
	If we can't operate properly, run in read-only ,mode where we try
	to read the file if possible, but never write defaults back.

2002-10-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: ([-synchronize]) handle locking more
	carefully ... avoid cpu intensive busy loops and give up after
	a while.

2002-10-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLog.m: Added GSPrintf()
	* Tools/defaults.m: Use GSPrintf()
	* Tools/pldes.m: ditto
	* Tools/plser.m: ditto
	* Tools/plmerge.m: ditto
	* Tools/plparse.m: ditto
	* Tools/sfparse.m: ditto
	* Documentation/Base.gsdoc: Bump gsdoc version to 1.0.0
	* Documentation/Functions.gsdoc: ditto
	* Documentation/TypesAndConstants.gsdoc: ditto
	* Source/NSLog.m: Fix typo in comment.
	* Tools/AGSOutput.m: Bump gsdoc version to 1.0.0
	* Tools/GNUmakefile: Add gsdoc 1.0.0 dtd
	* Tools/autogsdoc.m: Bump gsdoc version to 1.0.0
	* Tools/gsdoc-0_6_7.dtd: Revert to earlier version
	* Tools/gsdoc-1_0_0.dtd: New from latest update to 0.6.7
	I think the documentation dtd is pretty complete now.

2002-10-09  Richard Frith-Macdonald <rfm@gnu.org>
