@@ -14,7 +14,9 @@
 	type specifications of the form (id<protocol1,protocol2,...>)
 	* Tools/autogsdoc.m: Add -Files option to read names of files
 	to process as a property list rather than using command line args.
-	Add -Clean flag to remove generated output files.
+	Add -Clean flag to remove generated output files and purge
+	generated data from templates.  Add -CleanTemplates to completely
+	temove template files.
 	* Tools/AGSParser.m: Warn about private methods and ivars.
 
 2002-10-12  Richard Frith-Macdonald <rfm@gnu.org>
